code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_143.wast
(assert_invalid
  (module (func $type-break-operand-void-vs-f32 (result f32)
    (f32.floor (block (br 0 (nop))))
  ))
  "type mismatch"
)